--- a/test dummy/sample_data.hbs
+++ b/test dummy/sample_data.hbs
@@ -7,7 +7,8 @@
       "Time": "{{time '00:00' '23:59'}}",
       "duration": "{{int 1 5}} hours, {{int 0 59}} minutes",
       "description": "{{lorem min=3 max=20}}",
-      "location": "{{city}}, {{country}}"
+      "location": "{{city}}, {{country}}",
+      "récurrence": "{{boolean "true" "false"}}"
     }
     {{/repeat}}
   ]
