last version before give up and use library

--- a/moz-todo-react/src/assets/test dummy/sample_data.hbs
+++ b/moz-todo-react/src/assets/test dummy/sample_data.hbs
@@ -3,9 +3,9 @@
     {{#repeat min=20 max=30}}
     {
       "title": "{{lorem min=2 max=6}}",
-      "date": "{{date '2010' '2015' 'DD/MM/YYYY'}}",
+      "date": "{{date '2025-10-20' '2025-11-03' 'DD/MM/YYYY'}}",
       "Time": "{{time '00:00' '23:59'}}",
-      "duration": "{{int 1 5}} hours, {{int 0 59}} minutes",
+      "duration": "{{int 1 5}} hours",
       "description": "{{lorem min=3 max=20}}",
       "location": "{{city}}, {{country}}",
       "récurrence": "{{boolean "true" "false"}}"
