passage à l'échelle réussi!

--- a/moz-todo-react/sample_data.hbs
+++ b/moz-todo-react/sample_data.hbs
@@ -1,6 +1,6 @@
 {
   "events": [
-    {{#repeat min=20 max=30}}
+    {{#repeat 3000}}
     {
       "title": "{{lorem min=2 max=6}}",
       "date": "{{date '2025-10-20' '2025-11-03' 'DD/MM/YYYY'}}",
