--- a/moz-todo-react/sample_data.hbs
+++ b/moz-todo-react/sample_data.hbs
@@ -1,7 +1,8 @@
 {
-  "events": [
+  "docs": [
     {{#repeat 3000}}
     {
+      "_id": "{{@index}}",
       "title": "{{lorem min=2 max=6}}",
       "date": "{{date '2025-10-20' '2025-11-03' 'DD/MM/YYYY'}}",
       "Time": "{{time '00:00' '23:59'}}",
